# shu

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.COMMERCIAL.md  LICENSE.COMMUNITY.md  LICENSE.md  Makefile  README.md  SECURITY.md  init-db.sql  pyproject.toml  requirements-benchmark.txt  requirements-local-inference.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
backend/: alembic.ini
docs/: API_KEY_AUTHENTICATION_PLAN.md  ARCHITECTURE.md  EXPERIENCE_MODEL_CONFIGURATION_API.md  EXPERIENCE_USER_GUIDE.md  FRONTEND_OVERVIEW.md  INTEGRATIONS_CATALOG.md  LINTING_CONFIGURATION.md  LINTING_COVERAGE.md  LINTING_GUIDE.md  LINTING_TOOLS_REFERENCE.md  SHU-RAG-IMPLEMENTATION-PLAN.md  SHU_TECHNICAL_ROADMAP.md  TUTORIAL_PLUGIN_DEVELOPMENT.md  _WHAT_IS_SHU.md  api_rbac.md
experiences/: casino-alcohol-restriction-experience-thomas-anderson.yaml  casino-vip-arrival-experience-ahmed-al-mansoori.yaml  casino-vip-arrival-experience-david-chen.yaml  hotel-vip-arrival-experience-david-chen.yaml  hotel-vip-arrival-experience.yaml
plugins/github/: client.py  conftest.py  manifest.py  plugin.py  pyproject.toml  test_plugin.py
plugins/shu-plugin-sdk/: pyproject.toml
plugins/shu-plugin-sdk/_cookiecutter/: plugin.py  test_plugin.py
plugins/shu-plugin-sdk/shu_plugin_sdk/: __init__.py  contracts.py  result.py  retry.py  testing.py
plugins/shu-plugin-sdk/tests/: test_contracts.py  test_retry.py  test_testing.py
(+1229 files in other folders)
